[project]
name = "hyperliquide"
version = "0.1.0"
description = ""
authors = [
    {name = "silverbackc",email = "silverbackc@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "hyperliquid-python-sdk (>=0.16.0,<0.17.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "questdb (>=3.0.0,<4.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
